--- a/src/pages/artikler.astro
+++ b/src/pages/artikler.astro
@@ -13,19 +13,19 @@ import List from "../components/List.astro";
       />
     </div>
     <List
-      image="artikel1.webp"
+      image="/artikel1.webp"
       descr="Billede af klistermærker"
       title="D. 20/11/25"
-      text="Den danske lovgivning om sexarbejde og The Red Vans bud på forbedringer"
+      text="Vores take på den danske lovgivning om sexarbejde"
     />
     <List
-      image="artikel2.webp"
+      image="/artikel2.webp"
       descr="Billede af to personer på gaden"
       title="D. 08/10/25"
       text="Hvordan påvirker sæsonskiftet gadebaseret sexarbejdere?"
     />
     <List
-      image="artikel3.webp"
+      image="/artikel3.webp"
       descr="Personer fra et foredragspanel"
       title="D. 26/09/25"
       text="Skadesreduktion: Hvad betyder det, og hvordan arbejder The Red Van med det?"
