--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,9 +35,9 @@ import Stoetform from "../components/Stoetform.astro";
         hygiejnisk og værdigt arbejdsmiljø end gaden. Vi arbejder
         skadesreducerende og kæmper aktivt for sexarbejderes rettigheder.
       </Heading>
+
       <Button variant="light">Vores arbejde</Button>
     </div>
-
     <div class="mx-auto pb-3xl">
       <Stoetform />
     </div>
@@ -201,7 +201,7 @@ import Stoetform from "../components/Stoetform.astro";
     <div class="border-y-accent-red border-y py-md md:py-0">
       <List
         title="D. 20/11/25"
-        text="Den danske lovgivning om sexarbejde og The Red Vans bud på forbedringer"
+        text="Vores take på den danske lovgivning om sexarbejde"
       />
     </div>
     <div class="border-b-accent-red border-b py-md mb-xl md:py-0">
