--- a/src/pages/stoet.astro
+++ b/src/pages/stoet.astro
@@ -31,7 +31,7 @@ import Stoetform from "../components/Stoetform.astro";
         vi de risici og den utryghed, der ofte følger med at arbejde om natten og
         på gaden. Støt The Red Van og gør en mærkbar forskel for gadebaserede sexarbejdere!
       </Text>
-      <div class="mx-auto">
+      <div class="flex place-self-center md:place-self-end">
         <Stoetform />
       </div>
       <img src="/bil.webp" alt="Rød bil" class="py-3xl md:pb-2xl md:pt-0" />
