--- a/src/pages/vores-arbejde.astro
+++ b/src/pages/vores-arbejde.astro
@@ -48,7 +48,7 @@ import Text from "../components/Text.astro";
     </div>
   </section>
 
-  <section class="bg-blue px-gutter py-3xl md:px-2xl md:py-4xl">
+  <section class="bg-blue px-gutter pb-3xl pt-lg md:px-2xl md:pb-4xl">
     <Heading htmlheading="h2" size="xsmall" stylingclasses=" pb-2xl">
       Udover at facilitere vores skadesreducerende <br />gadeindsats laver vi
       også andre vigtige ting som…
