--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import Text from "../components/Text.astro";
 ---
 
 <section
-  class="bg-bordeaux grid md:grid-cols-3 md:grid-rows-3 px-gutter py-3xl md:px-2xl md:py-4xl gap-2xl"
+  class="bg-bordeaux grid md:grid-cols-3 md:grid-rows-3 px-gutter py-3xl md:px-2xl md:pt-2xl md:pb-0 gap-2xl"
 >
   <div class="md:col-start-2 md:col-end-3">
     <Heading htmlheading="h2" size="small" stylingclasses="uppercase text-hf ">
