tilføjer nye billeder, laver ordenlig spacing fra header og a-tag på buttons

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,7 +32,7 @@ import Text from "../components/Text.astro";
       <br /><br />+45 93919278
     </Text>
   </div>
-  <div class="md:col-start-1 md:col-end-2 md:row-start-3 md:row-end-4">
+  <div class="md:col-start-1 md:col-end-2 md:row-start-3 md:row-end-4 w-2/3">
     <img src="/logo-footer.png" alt="The red vans logo" />
   </div>
 </section>
