--- a/src/pages/artikler.astro
+++ b/src/pages/artikler.astro
@@ -2,9 +2,11 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import HeadingParagraf from "../components/HeadingParagraf.astro";
 import List from "../components/List.astro";
+import Spacing from "../components/Spacing.astro";
 ---
 
 <MainLayout title="Artikler">
+  <Spacing />
   <div class="bg-greywhite px-gutter py-3xl md:px-2xl md:pt-4xl md:pb-4xl">
     <div class="pb-3xl">
       <HeadingParagraf
