--- a/src/pages/hvem-vi-er.astro
+++ b/src/pages/hvem-vi-er.astro
@@ -6,10 +6,12 @@ import Card from "../components/Card.astro";
 import TextParagraf from "../components/TextParagraf.astro";
 import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
+import Spacing from "../components/Spacing.astro";
 ---
 
 <MainLayout title="Hvem vi er">
-  <section class="bg-green px-gutter py-3xl md:px-2xl md:py-4xl">
+  <Spacing />
+  <section class="bg-green px-gutter pb-3xl pt-6xl md:px-2xl md:py-4xl">
     <HeadingParagraf
       title="Hvem vi er"
       text="The Red Van er et ungt fællesskab, som består af en bred vifte af frivillige og ansatte, der spænder over forskellige faglige og personlige baggrunde. Vores forening omfatter alt fra studerende, akademikere, psykologer og sundhedsfaglige til kreative sjæle, socialfaglige medarbejdere og gadeplansarbejdere."
