--- a/src/pages/vores-arbejde.astro
+++ b/src/pages/vores-arbejde.astro
@@ -5,10 +5,12 @@ import TextParagraf from "../components/TextParagraf.astro";
 import Card from "../components/Card.astro";
 import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
+import Spacing from "../components/Spacing.astro";
 ---
 
 <MainLayout title="Vores arbejde">
-  <section class="bg-greywhite px-gutter py-3xl md:px-2xl md:pt-4xl md:pb-6xl">
+  <Spacing />
+  <section class="bg-greywhite px-gutter py-3xl md:px-2xl md:pb-6xl md:pt-4xl">
     <HeadingParagraf
       title="Vores arbejde"
       text="Hos The Red Van er vi stærke fortalere for sexarbejderes rettigheder. Vi arbejder aktivt for at ændre den offentlige mening og bekæmpe stigmaet omkring sexarbejde, imens vi hver uge selv er til stede på gaden."
