--- a/src/pages/bliv-frivillig.astro
+++ b/src/pages/bliv-frivillig.astro
@@ -5,9 +5,11 @@ import TextParagraf from "../components/TextParagraf.astro";
 import Text from "../components/Text.astro";
 import Heading from "../components/Heading.astro";
 import Button from "../components/Button.astro";
+import Spacing from "../components/Spacing.astro";
 ---
 
 <MainLayout title="Bliv frivillig">
+  <Spacing />
   <section class="bg-green px-gutter py-3xl md:px-2xl md:pt-4xl md:pb-4xl">
     <HeadingParagraf
       title="Bliv frivillig"
