--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,12 @@ import Text from "../components/Text.astro";
   class="bg-bordeaux grid md:grid-cols-3 md:grid-rows-3 px-gutter py-3xl md:px-2xl md:pt-2xl md:pb-0 gap-2xl"
 >
   <div class="md:col-start-2 md:col-end-3">
-    <Heading htmlheading="h2" size="small" stylingclasses="uppercase text-hf ">
+    <Heading
+      htmlheading="h2"
+      size="small"
+      stylingclasses="uppercase text-hf"
+      animate={false}
+    >
       Organisation
     </Heading>
     <Text teksttype="base" stylingclasses="text-hf underline">
@@ -15,7 +20,12 @@ import Text from "../components/Text.astro";
     </Text>
   </div>
   <div class="md:col-start-2 md:col-end-3 md:row-start-2 md:row-end-3">
-    <Heading htmlheading="h2" size="small" stylingclasses="uppercase text-hf">
+    <Heading
+      htmlheading="h2"
+      size="small"
+      stylingclasses="uppercase text-hf"
+      animate={false}
+    >
       Sociale medier
     </Heading>
     <Text teksttype="base" stylingclasses="text-hf"
@@ -23,7 +33,12 @@ import Text from "../components/Text.astro";
     >
   </div>
   <div class="md:col-start-3 md:col-end-4 md:row-start-1 md:row-end-3">
-    <Heading htmlheading="h2" size="small" stylingclasses="uppercase text-hf">
+    <Heading
+      htmlheading="h2"
+      size="small"
+      stylingclasses="uppercase text-hf"
+      animate={false}
+    >
       Kontakt os
     </Heading>
     <Text teksttype="base" stylingclasses="text-hf">
