--- a/src/components/List.astro
+++ b/src/components/List.astro
@@ -15,12 +15,18 @@ import Heading from "./Heading.astro";
         />
       )
     }
-    <Heading htmlheading="h2" size="small" stylingclasses="pb-sm md:pb-0"
-      >{title}</Heading
+    <Heading
+      htmlheading="h2"
+      size="small"
+      stylingclasses="pb-sm md:pb-0"
+      animate={false}>{title}</Heading
     >
   </div><div class="md:flex md:justify-between">
-    <Heading htmlheading="h3" size="xxsmall" stylingclasses="pb-md md:pr-lg"
-      >{text}</Heading
+    <Heading
+      htmlheading="h3"
+      size="xxsmall"
+      stylingclasses="pb-md md:pr-lg"
+      animate={false}>{text}</Heading
     >
     <div><Button variant="light">Læs</Button></div>
   </div>
