--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,7 @@ import Spacing from "../components/Spacing.astro";
       htmlheading="h2"
       size="medium"
       stylingclasses="text-hero font-regular"
+      animate={false}
     >
       Vi støtter sexarbejdere i deres ret til et trygt og værdigt arbejdsliv.
     </Heading>
@@ -31,7 +32,12 @@ import Spacing from "../components/Spacing.astro";
       <Heading htmlheading="h1" size="xlarge" stylingclasses="uppercase pb-md">
         Støt vores mission
       </Heading>
-      <Heading htmlheading="h2" size="xsmall" stylingclasses="pb-xl">
+      <Heading
+        htmlheading="h2"
+        size="xsmall"
+        stylingclasses="pb-xl"
+        animate={false}
+      >
         The Red Vans mission er at sikre bedre vilkår for gadebaserede
         sexarbejdere. Med vores ombyggede varevogn tilbyder vi et tryggere, mere
         hygiejnisk og værdigt arbejdsmiljø end gaden. Vi arbejder
@@ -191,6 +197,7 @@ import Spacing from "../components/Spacing.astro";
         htmlheading="h3"
         size="xsmall"
         stylingclasses=" pb-6xl md:pb-5xl"
+        animate={false}
       >
         Vi lægger vægt på, at sexarbejdere skal have de samme rettigheder og
         beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe
