--- a/src/pages/historien.astro
+++ b/src/pages/historien.astro
@@ -36,28 +36,17 @@ import Spacing from "../components/Spacing.astro";
 
     <div class="grid md:grid-cols-3">
       <div class="md:col-start-2 md:col-end-4">
-        <div
-          x-data="{ show: false }"
-          x-intersect.once="show = true"
-          class="overflow-hidden"
+        <Heading htmlheading="h4" size="xsmall" stylingclasses="pt-3xl"
+          >“I begyndelsen var vi usikre på, om nogen ville bruge vognen. Men
+          fordi vi selv var sexarbejdere og til stede på gaden, opbyggede vi
+          hurtigt tillid. Tilbuddet er stadig uformelt og anonymt – vi kræver
+          ikke noget til gengæld. Det gør, at vognen er blevet et populært
+          tilbud på gaden.”</Heading
+        ><br />
+        <Text>
+          — Jelena Seidel, politisk konsulent i The Red Van & medstifter af
+          Sexelancen</Text
         >
-          <div
-            class="transform transition-transform duration-800 easy-ease"
-            :class="show ? 'translate-y-0' : 'translate-y-10'"
-          >
-            <Heading htmlheading="h4" size="xsmall" stylingclasses="pt-3xl"
-              >“I begyndelsen var vi usikre på, om nogen ville bruge vognen. Men
-              fordi vi selv var sexarbejdere og til stede på gaden, opbyggede vi
-              hurtigt tillid. Tilbuddet er stadig uformelt og anonymt – vi
-              kræver ikke noget til gengæld. Det gør, at vognen er blevet et
-              populært tilbud på gaden.”</Heading
-            ><br />
-            <Text>
-              — Jelena Seidel, politisk konsulent i The Red Van & medstifter af
-              Sexelancen</Text
-            >
-          </div>
-        </div>
       </div>
     </div>
 
