--- a/src/components/Stoetform.astro
+++ b/src/components/Stoetform.astro
@@ -43,7 +43,7 @@ import Button from "./Button.astro";
       Månedligt beløb
     </Text>
 
-    <div class="flex flex-row gap-7 pb-md">
+    <div class="flex flex-row gap-7 md:gap-13 pb-md">
       <!-- 75 kr -->
       <label class="flex items-center gap-5 cursor-pointer">
         <input
@@ -111,7 +111,7 @@ import Button from "./Button.astro";
     <!-- INDTAST SELV BELØB -->
     <div class="flex flex-col w-80.25 lg:w-96.75 pb-xl">
       <label for="selvvalgt"
-        ><Text teksttype="formtekst" stylingclasses="text-dark text-base pb-xs"
+        ><Text teksttype="basemedium" stylingclasses="pb-xs"
           >Vælg selv et beløb:</Text
         ></label
       >
